src/styles/main.css
:root {
  font-family: "Inter", sans-serif;
  --border-radius: 0.5rem;
}

@supports (font-variation-settings: normal) {
  :root {
    font-family: "Inter var", sans-serif;
  }
}

html,
html[data-theme="light"] {
  --primary-100: #111;
  --secondary-100: #fff;
  --secondary-200: #f1f1f1;
  --secondary-300: #ddd;
  --secondary-400: #ccc;
  --secondary-500: #b7b7b7;
  --code-bg: #333;
  --code-highlight-bg: #444;
  --border-color: #ddd;
  --font-color-opacity: 0.8;
  --font-color: rgba(0, 0, 0, var(--font-color-opacity));
  --font-color-secondary: rgba(80, 80, 80, var(--font-color-opacity));

  --link-color: #5755c9;
  --link-hover-color: #1e1c63;
}

html[data-theme="dark"] {
  --primary-100: #fff;
  --secondary-100: #2a3546;
  --secondary-200: #334054;
  --secondary-300: #44546d;
  --secondary-400: #546784;
  --secondary-500: #65799b;
  --code-bg: #222a3a;
  --code-highlight-bg: #1a202d;
  --border-color: rgba(255, 255, 255, 0.3);
  --font-color-opacity: 1;
  --font-color: rgba(255, 255, 255, var(--font-color-opacity));
  --font-color-secondary: rgba(160, 160, 160, var(--font-color-opacity));

  --link-color: #b3e3ff;
  --link-hover-color: #84acc5;
}

/* base styling */
* {
  box-sizing: border-box;
}

html {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;

  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  color: var(--primary-100);
}

html,
body {
  margin: 0;
  padding: 0;
}

body {
  background-color: var(--secondary-100);
  font-size: 1rem;
}

p {
  margin-bottom: 1.15rem;
  font-size: 1rem;
  opacity: 0.95;
}

h1,
h2,
h3,
h4,
h5 {
  margin: 1rem 0 0.875rem;
  font-weight: 600;
  line-height: 1.15;
  @apply tracking-tight;
}

h1 {
  margin-top: 0;
  font-size: 3rem;
}

h2 {
  font-size: 2.25rem;
}

h3 {
  font-size: 2rem;
}

h4 {
  font-size: 1.875rem;
}

h5 {
  font-size: 1.5rem;
}

small,
.text_small {
  font-size: 0.667rem;
}

figcaption {
  color: var(--font-color-secondary) !important;
}

a {
  color: var(--link-color);
  transition: 0.15s all;
}

a:hover {
  color: var(--link-hover-color);
}

pre {
  @apply rounded;
}

:not(pre) > code[class*="language-"],
pre[class*="language-"] {
  background: var(--code-bg);
  font-size: 1rem;
  @apply mb-6 mt-6;
}

blockquote {
  background: var(--secondary-200);
  border-left: 10px solid #ccc;
  margin: 0.2rem 0;
  padding: 0.5rem 10px;
  quotes: "\201C""\201D""\2018""\2019";
}

blockquote:before {
  color: #ccc;
  content: open-quote;
  font-size: 4rem;
  line-height: 0.1em;
  margin-right: 0.25em;
  vertical-align: -0.4em;
}

blockquote p {
  @apply inline;
}

ul {
  @apply list-disc;
  @apply list-inside;
}

ol {
  @apply list-decimal;
  @apply list-inside;
  @apply ml-6;
  @apply mt-4;
  @apply leading-relaxed;
}

ol li {
  @apply mt-4;
}

ol li::marker {
  font-weight: bold;
}

/* class styles */
.skip-link {
  position: absolute;
  top: -40px;
  left: 0;
  right: 0;
  @apply bg-slate-900;
  @apply text-white;
  z-index: 999;
  padding: 8px;
}

.skip-link:focus {
  top: 5px;
}

.blog__post {
  display: grid;
  font-size: 1.2rem;
  grid-template-columns:
    1fr
    min(65ch, 100%)
    1fr;
}

.blog__post > * {
  grid-column: 2;
}

.blog__post table {
  border-radius: 5px;
  margin: 1.5rem 0;
  background: var(--secondary-200);
  @apply text-base;
  @apply shadow;
}

.blog__post td,
.blog__post th {
  padding: 0.5rem 0.8rem;
}

.blog__post thead {
  background: var(--secondary-300);
  border-radius: 5px;
}

.blog__post thead,
.blog__post tr:not(:last-child) {
  text-align: left;
  border-bottom: 1px solid var(--border-color);
}

.blog__post ul,
.blog__post ol {
  margin-bottom: 1.15rem;
  font-size: 1rem;
  margin-left: 5%;
}

.blog__post ul > li,
.blog__post ol > li {
  margin-top: 0.625rem;
}

.blog__post p a:not(.header-link) {
  border-bottom: 2px solid var(--link-color);
  transition: border 0.2s ease-in-out;
}
.blog__post p a:hover:not(.header-link) {
  border-bottom: 2px solid var(--link-hover-color);
}

p + ol {
  margin-top: 0;
}

.full-bleed {
  width: 100%;
  margin-bottom: 40px;
  margin-top: 40px;
  grid-column: 1 / -1;
  z-index: 60;
  padding: 0 !important;
}
.full-bleed > img {
  width: 100%;
}

.header-link {
  position: relative;
  top: 30px;
  left: -25px;
  opacity: 0.2;
}
.header-link:hover {
  opacity: 1;
}
.header-link > svg {
  fill: var(--font-color);
  width: 1.25rem;
  height: 1.25rem;
  margin-top: 5px;
}

.font-bold {
  font-variation-settings: "wght" 700, "slnt" 0;
}

.table__contents ul {
  list-style-type: none;
  margin: 0;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.table__contents > ul > li {
  padding: 0.2rem 0;
}

.table__contents > ul > li > ul {
  padding-left: 1rem;
}

.table__contents ul li,
.table__contents ul li p {
  margin: 0;
}

/* ---- Animations ---- */

@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes pulse {
  0% {
    box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
  }
  100% {
    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
  }
}

.animated {
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}

.pulse {
  -webkit-animation-name: pulse;
  animation-name: pulse;
}

.fadeIn {
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.astro-code {
  padding: 12px 16px;
  margin: 8px 0;
  font-size: 1rem;
  border-radius: 0.5rem;
}

:not(.astro-code) > code {
  padding: 2px 4px;
  border-radius: 0.5rem;
  color: #79c0ff;
  background-color: #0d1117;
}

